Added datatype check in mixed precision training. documentation around setting env vars

--- a/Ch13/13.1_Tensorboard.ipynb
+++ b/Ch13/13.1_Tensorboard.ipynb
@@ -247,22 +247,13 @@
     },
     {
      "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 4063), started 1:29:24 ago. (Use '!kill 4063' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-36f9bd4b67bad938\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b3d82bc14440d921\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-36f9bd4b67bad938\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b3d82bc14440d921\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -725,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,8 +812,7 @@
     "\n",
     "    def get_image_and_label(file_path):\n",
     "\n",
-    "        tokens = tf.strings.split(file_path, os.path.sep)\n",
-    "        #print(tf.strings.split(tf.strings.split(tokens[-1],'.')[0], '_'))\n",
+    "        tokens = tf.strings.split(file_path, os.path.sep)        \n",
     "        label = (tf.strings.to_number(tf.strings.split(tf.strings.split(tokens[-1],'.')[0], '_')[-1])-1)//80\n",
     "\n",
     "        # load the raw data from the file as a string\n",
@@ -859,7 +849,10 @@
    "source": [
     "## Improving the CNN backed up by TensorBoard profiler findings\n",
     "\n",
-    "One of the findings from the TensorBoard profilMixed Precision \n",
+    "We are going to introduce the following changes\n",
+    "* Optimize the `tf.data` pipeline by incorporating prefetching and parallaized map functions\n",
+    "* Use mixed precision training\n",
+    "* Use private threads for the GPU to launch kernels\n",
     "\n",
     "GPUs having a CUDA computing capability of more than 7 will be able to run mixed precision computations. If not, you will see an error similar to below.\n",
     "\n",
@@ -883,8 +876,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "os.environ[\"TF_GPU_THREAD_MODE\"] = 'gpu_private'\n",
-    "import tensorflow as tf"
+    "## Setting Environment Variables\n",
+    "\n",
+    "To set environment variables you can do the following.\n",
+    "\n",
+    "### Linux\n",
+    "\n",
+    "Set the environment variable by,\n",
+    "* Opening a terminal \n",
+    "* Run `export TF_GPU_THREAD_MODE=gpu_private`\n",
+    "* Verify the environment variable is set by calling `echo $TF_GPU_THREAD_MODE`\n",
+    "* Open a new shell and start the jupyter notebook server\n",
+    "\n",
+    "### Windows\n",
+    "\n",
+    "Set the environment variable by,\n",
+    "* From the start menu select `Edit the system environment variables`\n",
+    "* Click the button called `environment variables`\n",
+    "* Add a new environment variable `TF_GPU_THREAD_MODE=gpu_private` in the opened dialog\n",
+    "* Open a new command prompt and start the jupyter notebook server\n",
+    "\n",
+    "### Conda environment\n",
+    "\n",
+    "To set environment variables in a conda environment,\n",
+    "* Activate the conda environment with `conda activate manning.tf2`\n",
+    "* Run `conda env config vars set TF_GPU_THREAD_MODE=gpu_private`\n",
+    "* Deactivate and reactivate the environment, for the variable to take effect\n",
+    "* Start the jupyter notebook server"
    ]
   },
   {
@@ -953,8 +971,7 @@
     "\n",
     "    def get_image_and_label(file_path):\n",
     "\n",
-    "        tokens = tf.strings.split(file_path, os.path.sep)\n",
-    "        #print(tf.strings.split(tf.strings.split(tokens[-1],'.')[0], '_'))\n",
+    "        tokens = tf.strings.split(file_path, os.path.sep)        \n",
     "        label = (tf.strings.to_number(tf.strings.split(tf.strings.split(tokens[-1],'.')[0], '_')[-1])-1)//80\n",
     "\n",
     "        # load the raw data from the file as a string\n",
@@ -965,7 +982,7 @@
     "\n",
     "    dataset = dataset.map(\n",
     "        get_image_and_label,\n",
-    "        #num_parallel_calls=tf.data.AUTOTUNE\n",
+    "        num_parallel_calls=tf.data.AUTOTUNE\n",
     "    ).shuffle(400)\n",
     "\n",
     "    # Make the validation dataset the first 10000 data\n",
@@ -988,6 +1005,34 @@
     "# Resetting to float32\n",
     "policy = mixed_precision.Policy('float32')\n",
     "mixed_precision.set_global_policy(policy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking the data types come into play during mixed precision training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input to the layers have the data type: <dtype: 'float16'>\n",
+      "Variables in the layers have the data type: <dtype: 'float32'>\n",
+      "Output of the layers have the data type: <dtype: 'float16'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Input to the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").input.dtype))\n",
+    "print(\"Variables in the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").trainable_variables[0].dtype))\n",
+    "print(\"Output of the layers have the data type: {}\".format(conv_model.get_layer(\"conv2d_1\").output.dtype))"
    ]
   },
   {
