Working through chapter 14. Added up to the trainer. Added some outputs from 2P reviews

--- a/Ch03/3.1.Keras_APIs.ipynb
+++ b/Ch03/3.1.Keras_APIs.ipynb
@@ -35,7 +35,7 @@
      "output_type": "stream",
      "text": [
       "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.1.0\n"
+      "TensorFlow version: 2.4.1\n"
      ]
     }
    ],
@@ -242,6 +242,203 @@
     "y = tf.one_hot(iris_df[\"label\"], depth=3)\n",
     "\n",
     "iris_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_width  petal_length\n",
+      "31      -0.443333        0.346    -2.258667     -0.798667\n",
+      "23      -0.743333        0.246    -2.058667     -0.698667\n",
+      "70       0.056667        0.146     1.041333      0.601333\n",
+      "100      0.456667        0.246     2.241333      1.301333\n",
+      "44      -0.743333        0.746    -1.858667     -0.798667\n",
+      "..            ...          ...          ...           ...\n",
+      "113     -0.143333       -0.554     1.241333      0.801333\n",
+      "91       0.256667       -0.054     0.841333      0.201333\n",
+      "146      0.456667       -0.554     1.241333      0.701333\n",
+      "124      0.856667        0.246     1.941333      0.901333\n",
+      "61       0.056667       -0.054     0.441333      0.301333\n",
+      "\n",
+      "[150 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]], shape=(150, 3), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
    ]
   },
   {
@@ -845,7 +1042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
