--- a/Ch04/4.2.Convolution_networks.ipynb
+++ b/Ch04/4.2.Convolution_networks.ipynb
@@ -46,7 +46,7 @@
      "text": [
       "Warning: Numpy is not imported. Setting the seed for Numpy failed.\n",
       "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.1.0\n"
+      "TensorFlow version: 2.4.1\n"
      ]
     }
    ],
@@ -98,6 +98,23 @@
     "import tensorflow_datasets as tfds\n",
     "# Loading the CIFAR10 dataset\n",
     "data = tfds.load('cifar10')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'test': <PrefetchDataset shapes: {id: (), image: (32, 32, 3), label: ()}, types: {id: tf.string, image: tf.uint8, label: tf.int64}>, 'train': <PrefetchDataset shapes: {id: (), image: (32, 32, 3), label: ()}, types: {id: tf.string, image: tf.uint8, label: tf.int64}>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
    ]
   },
   {
@@ -299,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,6 +353,382 @@
     "Finally, you can train the model. But to do that we will need to slightly change the dataset object we have. We will convert the images to `float32` (which are originally `uint8`) and convert labels to one-hot encoded vectors. To do this we will use the `tf.data.DataSet.map()` function as we have done earlier.\n",
     "\n",
     "Now let's train the model. We can see that training accuracy of the model is growing steadily. That's a great result! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Section 4.2\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "def format_data(x, depth):\n",
+    "    \"\"\" Create a tuple where 1st element is a batch of images \n",
+    "    and the second is a batch of onehot encoded vectors\"\"\"\n",
+    "    return (tf.cast(x[\"image\"], 'float32'), tf.one_hot(x[\"label\"], depth=depth))\n",
+    "\n",
+    "# Map the dataset using the function\n",
+    "tr_data = data[\"train\"].map(lambda x: format_data(x, depth=10)).batch(32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(32, 32, 32, 3), dtype=float32, numpy=\n",
+      "array([[[[143.,  96.,  70.],\n",
+      "         [141.,  96.,  72.],\n",
+      "         [135.,  93.,  72.],\n",
+      "         ...,\n",
+      "         [ 96.,  37.,  19.],\n",
+      "         [105.,  42.,  18.],\n",
+      "         [104.,  38.,  20.]],\n",
+      "\n",
+      "        [[128.,  98.,  92.],\n",
+      "         [146., 118., 112.],\n",
+      "         [170., 145., 138.],\n",
+      "         ...,\n",
+      "         [108.,  45.,  26.],\n",
+      "         [112.,  44.,  24.],\n",
+      "         [112.,  41.,  22.]],\n",
+      "\n",
+      "        [[ 93.,  69.,  75.],\n",
+      "         [118.,  96., 101.],\n",
+      "         [179., 160., 162.],\n",
+      "         ...,\n",
+      "         [128.,  68.,  47.],\n",
+      "         [125.,  61.,  42.],\n",
+      "         [122.,  59.,  39.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[187., 150., 123.],\n",
+      "         [184., 148., 123.],\n",
+      "         [179., 142., 121.],\n",
+      "         ...,\n",
+      "         [198., 163., 132.],\n",
+      "         [201., 166., 135.],\n",
+      "         [207., 174., 143.]],\n",
+      "\n",
+      "        [[187., 150., 117.],\n",
+      "         [181., 143., 115.],\n",
+      "         [175., 136., 113.],\n",
+      "         ...,\n",
+      "         [201., 164., 132.],\n",
+      "         [205., 168., 135.],\n",
+      "         [207., 171., 139.]],\n",
+      "\n",
+      "        [[195., 161., 126.],\n",
+      "         [187., 153., 123.],\n",
+      "         [186., 151., 128.],\n",
+      "         ...,\n",
+      "         [212., 177., 147.],\n",
+      "         [219., 185., 155.],\n",
+      "         [221., 187., 157.]]],\n",
+      "\n",
+      "\n",
+      "       [[[203., 214., 234.],\n",
+      "         [191., 207., 226.],\n",
+      "         [178., 200., 224.],\n",
+      "         ...,\n",
+      "         [127., 172., 213.],\n",
+      "         [126., 171., 212.],\n",
+      "         [124., 170., 211.]],\n",
+      "\n",
+      "        [[205., 214., 230.],\n",
+      "         [186., 199., 213.],\n",
+      "         [180., 197., 214.],\n",
+      "         ...,\n",
+      "         [132., 178., 219.],\n",
+      "         [130., 176., 219.],\n",
+      "         [129., 175., 217.]],\n",
+      "\n",
+      "        [[193., 200., 213.],\n",
+      "         [141., 151., 159.],\n",
+      "         [124., 137., 145.],\n",
+      "         ...,\n",
+      "         [136., 178., 218.],\n",
+      "         [134., 177., 218.],\n",
+      "         [132., 176., 217.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[ 40.,  47.,  56.],\n",
+      "         [ 33.,  37.,  42.],\n",
+      "         [ 31.,  35.,  41.],\n",
+      "         ...,\n",
+      "         [ 73.,  99., 132.],\n",
+      "         [ 64.,  91., 126.],\n",
+      "         [ 69.,  97., 133.]],\n",
+      "\n",
+      "        [[ 37.,  44.,  53.],\n",
+      "         [ 31.,  34.,  40.],\n",
+      "         [ 30.,  34.,  40.],\n",
+      "         ...,\n",
+      "         [ 72.,  98., 132.],\n",
+      "         [ 64.,  92., 127.],\n",
+      "         [ 68.,  96., 132.]],\n",
+      "\n",
+      "        [[ 34.,  41.,  50.],\n",
+      "         [ 29.,  32.,  38.],\n",
+      "         [ 28.,  32.,  38.],\n",
+      "         ...,\n",
+      "         [ 68.,  94., 127.],\n",
+      "         [ 62.,  89., 123.],\n",
+      "         [ 63.,  91., 126.]]],\n",
+      "\n",
+      "\n",
+      "       [[[106., 103., 104.],\n",
+      "         [103.,  97.,  99.],\n",
+      "         [102.,  93.,  96.],\n",
+      "         ...,\n",
+      "         [135., 126., 129.],\n",
+      "         [139., 130., 133.],\n",
+      "         [131., 122., 125.]],\n",
+      "\n",
+      "        [[106., 104., 105.],\n",
+      "         [105.,  99., 101.],\n",
+      "         [115., 106., 109.],\n",
+      "         ...,\n",
+      "         [137., 129., 132.],\n",
+      "         [135., 126., 129.],\n",
+      "         [124., 115., 118.]],\n",
+      "\n",
+      "        [[108., 105., 106.],\n",
+      "         [117., 111., 113.],\n",
+      "         [123., 114., 117.],\n",
+      "         ...,\n",
+      "         [132., 123., 126.],\n",
+      "         [126., 117., 120.],\n",
+      "         [121., 112., 115.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[136., 163., 117.],\n",
+      "         [135., 162., 115.],\n",
+      "         [139., 166., 117.],\n",
+      "         ...,\n",
+      "         [140., 144., 111.],\n",
+      "         [133., 135., 105.],\n",
+      "         [126., 125.,  98.]],\n",
+      "\n",
+      "        [[130., 150., 104.],\n",
+      "         [131., 150., 107.],\n",
+      "         [131., 150., 109.],\n",
+      "         ...,\n",
+      "         [141., 150., 112.],\n",
+      "         [144., 152., 115.],\n",
+      "         [140., 144., 111.]],\n",
+      "\n",
+      "        [[139., 151., 108.],\n",
+      "         [133., 144., 103.],\n",
+      "         [145., 156., 116.],\n",
+      "         ...,\n",
+      "         [129., 137., 100.],\n",
+      "         [138., 144., 110.],\n",
+      "         [134., 136., 106.]]],\n",
+      "\n",
+      "\n",
+      "       ...,\n",
+      "\n",
+      "\n",
+      "       [[[255., 255., 255.],\n",
+      "         [254., 254., 254.],\n",
+      "         [255., 255., 255.],\n",
+      "         ...,\n",
+      "         [232., 235., 243.],\n",
+      "         [227., 236., 245.],\n",
+      "         [220., 235., 244.]],\n",
+      "\n",
+      "        [[255., 255., 255.],\n",
+      "         [253., 253., 253.],\n",
+      "         [254., 254., 254.],\n",
+      "         ...,\n",
+      "         [233., 236., 242.],\n",
+      "         [234., 241., 248.],\n",
+      "         [228., 239., 247.]],\n",
+      "\n",
+      "        [[255., 255., 255.],\n",
+      "         [255., 255., 255.],\n",
+      "         [255., 255., 255.],\n",
+      "         ...,\n",
+      "         [242., 244., 249.],\n",
+      "         [243., 247., 253.],\n",
+      "         [229., 234., 242.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[201., 213., 229.],\n",
+      "         [185., 202., 218.],\n",
+      "         [173., 188., 201.],\n",
+      "         ...,\n",
+      "         [106., 119., 143.],\n",
+      "         [120., 126., 144.],\n",
+      "         [129., 130., 144.]],\n",
+      "\n",
+      "        [[192., 203., 224.],\n",
+      "         [172., 188., 210.],\n",
+      "         [173., 187., 204.],\n",
+      "         ...,\n",
+      "         [100., 117., 142.],\n",
+      "         [104., 118., 139.],\n",
+      "         [113., 119., 135.]],\n",
+      "\n",
+      "        [[179., 189., 214.],\n",
+      "         [169., 184., 209.],\n",
+      "         [175., 189., 210.],\n",
+      "         ...,\n",
+      "         [102., 113., 130.],\n",
+      "         [101., 114., 133.],\n",
+      "         [107., 116., 132.]]],\n",
+      "\n",
+      "\n",
+      "       [[[ 97., 115.,  61.],\n",
+      "         [103., 123.,  58.],\n",
+      "         [ 85., 103.,  55.],\n",
+      "         ...,\n",
+      "         [ 95., 107.,  63.],\n",
+      "         [117., 135.,  66.],\n",
+      "         [108., 128.,  70.]],\n",
+      "\n",
+      "        [[ 85., 101.,  61.],\n",
+      "         [ 87., 106.,  56.],\n",
+      "         [ 96., 115.,  64.],\n",
+      "         ...,\n",
+      "         [113., 128.,  65.],\n",
+      "         [127., 145.,  72.],\n",
+      "         [122., 145.,  74.]],\n",
+      "\n",
+      "        [[ 95., 110.,  63.],\n",
+      "         [ 75.,  92.,  56.],\n",
+      "         [ 97., 117.,  64.],\n",
+      "         ...,\n",
+      "         [124., 142.,  69.],\n",
+      "         [124., 142.,  72.],\n",
+      "         [116., 137.,  68.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[ 50.,  57.,  39.],\n",
+      "         [ 36.,  45.,  32.],\n",
+      "         [ 46.,  56.,  41.],\n",
+      "         ...,\n",
+      "         [ 71.,  84.,  47.],\n",
+      "         [ 82.,  88.,  66.],\n",
+      "         [ 78.,  87.,  59.]],\n",
+      "\n",
+      "        [[ 89.,  96.,  60.],\n",
+      "         [ 83.,  90.,  60.],\n",
+      "         [ 96., 102.,  73.],\n",
+      "         ...,\n",
+      "         [ 78.,  92.,  53.],\n",
+      "         [ 79.,  88.,  65.],\n",
+      "         [ 75.,  84.,  57.]],\n",
+      "\n",
+      "        [[112., 123.,  75.],\n",
+      "         [116., 129.,  80.],\n",
+      "         [117., 128.,  81.],\n",
+      "         ...,\n",
+      "         [ 74.,  85.,  55.],\n",
+      "         [ 87., 102.,  60.],\n",
+      "         [ 83.,  95.,  58.]]],\n",
+      "\n",
+      "\n",
+      "       [[[127., 144.,  97.],\n",
+      "         [115., 128.,  81.],\n",
+      "         [120., 127.,  80.],\n",
+      "         ...,\n",
+      "         [ 37.,  64.,  30.],\n",
+      "         [ 76., 102.,  67.],\n",
+      "         [158., 182., 148.]],\n",
+      "\n",
+      "        [[135., 138.,  84.],\n",
+      "         [147., 147.,  93.],\n",
+      "         [158., 154., 102.],\n",
+      "         ...,\n",
+      "         [ 33.,  54.,  28.],\n",
+      "         [ 65.,  91.,  59.],\n",
+      "         [162., 189., 156.]],\n",
+      "\n",
+      "        [[187., 173., 109.],\n",
+      "         [179., 162., 100.],\n",
+      "         [178., 159.,  98.],\n",
+      "         ...,\n",
+      "         [ 48.,  66.,  42.],\n",
+      "         [108., 124., 102.],\n",
+      "         [113., 129., 107.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[ 84., 107.,  71.],\n",
+      "         [113., 128.,  92.],\n",
+      "         [100., 105.,  70.],\n",
+      "         ...,\n",
+      "         [ 37.,  23.,  24.],\n",
+      "         [ 32.,  19.,  19.],\n",
+      "         [ 31.,  20.,  17.]],\n",
+      "\n",
+      "        [[ 99., 128.,  85.],\n",
+      "         [129., 160., 113.],\n",
+      "         [133., 162., 113.],\n",
+      "         ...,\n",
+      "         [ 32.,  15.,  15.],\n",
+      "         [ 34.,  22.,  14.],\n",
+      "         [ 53.,  43.,  31.]],\n",
+      "\n",
+      "        [[157., 197., 141.],\n",
+      "         [154., 199., 138.],\n",
+      "         [149., 192., 130.],\n",
+      "         ...,\n",
+      "         [ 52.,  34.,  31.],\n",
+      "         [ 91.,  74.,  59.],\n",
+      "         [126., 110.,  88.]]]], dtype=float32)>, <tf.Tensor: shape=(32, 10), dtype=float32, numpy=\n",
+      "array([[0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+      "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+      "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+      "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+      "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+      "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.]], dtype=float32)>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in tr_data.take(1):\n",
+    "    print(d)"
    ]
   },
   {
@@ -402,17 +795,6 @@
    ],
    "source": [
     "# Section 4.2\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "def format_data(x, depth):\n",
-    "    \"\"\" Create a tuple where 1st element is a batch of images \n",
-    "    and the second is a batch of onehot encoded vectors\"\"\"\n",
-    "    return (tf.cast(x[\"image\"], 'float32'), tf.one_hot(x[\"label\"], depth=depth))\n",
-    "\n",
-    "# Map the dataset using the function\n",
-    "tr_data = data[\"train\"].map(lambda x: format_data(x, depth=10)).batch(32)\n",
-    "\n",
     "# Fit the data\n",
     "history = cnn.fit(tr_data,epochs=25)"
    ]
@@ -441,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
