--- a/Ch05/5.1.Transformer.ipynb
+++ b/Ch05/5.1.Transformer.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
     "        )        \n",
     "        # Second layer's weights and biases\n",
     "        self.W2 = self.add_weight(\n",
-    "            shape=(input_shape[-1], self.d2), initializer='glorot_uniform',\n",
+    "            shape=(self.d1, self.d2), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )\n",
     "        self.b2 = self.add_weight(\n",
@@ -403,7 +403,7 @@
     "        ff1 = tf.nn.relu(tf.matmul(x,self.W1)+self.b1)\n",
     "        # Computing the second fully connected output\n",
     "        # Note that the second layer doesn't use an activation\n",
-    "        ff2 = tf.matmul(x,self.W2)+self.b2\n",
+    "        ff2 = tf.matmul(ff1, self.W2)+self.b2\n",
     "        return ff2\n",
     "    \n",
     "# Creating a dummy fully connected layer\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,16 +480,16 @@
     "        \n",
     "    def call(self, de_x, en_x, mask=None):\n",
     "        \n",
-    "        def compute_multihead_output(de_x, en_x, mask=None):\n",
+    "        def compute_multihead_output(attn_heads, de_x, en_x, mask=None):\n",
     "            \"\"\" Computing the multi head attention output\"\"\"\n",
-    "            outputs = [head(en_x, en_x, de_x, mask)[0] for head in self.attn_heads]\n",
+    "            outputs = [head(en_x, en_x, de_x, mask)[0] for head in attn_heads]\n",
     "            outputs = tf.concat(outputs, axis=-1)\n",
     "            return outputs\n",
     "        \n",
     "        # Multi head attention layer output (from decoder inputs)\n",
-    "        h1 = compute_multihead_output(de_x, de_x, mask)        \n",
+    "        h1 = compute_multihead_output(self.dec_attn_heads, de_x, de_x, mask)        \n",
     "        # Multi head attention layer output (from encoder outputs)\n",
-    "        h2 = compute_multihead_output(h1, en_x)\n",
+    "        h2 = compute_multihead_output(self.attn_heads, h1, en_x)\n",
     "        y = self.fc_layer(h2)\n",
     "        return y\n"
    ]
@@ -503,40 +503,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"embedding_22/Identity:0\", shape=(None, 25, 512), dtype=float32)\n",
-      "(None, 25, 512)\n",
-      "(None, 25, 512)\n",
       "Model: \"MinTransformer\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_23 (InputLayer)           [(None, 25)]         0                                            \n",
+      "input_1 (InputLayer)            [(None, 25)]         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_22 (Embedding)        (None, 25, 512)      153600      input_23[0][0]                   \n",
+      "embedding (Embedding)           (None, 25, 512)      153600      input_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "input_24 (InputLayer)           [(None, 25)]         0                                            \n",
+      "input_2 (InputLayer)            [(None, 25)]         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "encoder_layer_22 (EncoderLayer) (None, 25, 512)      2099712     embedding_22[0][0]               \n",
+      "encoder_layer (EncoderLayer)    (None, 25, 512)      2886144     embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_23 (Embedding)        (None, 25, 512)      204800      input_24[0][0]                   \n",
+      "embedding_1 (Embedding)         (None, 25, 512)      204800      input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "encoder_layer_23 (EncoderLayer) (None, 25, 512)      2099712     encoder_layer_22[0][0]           \n",
+      "encoder_layer_1 (EncoderLayer)  (None, 25, 512)      2886144     encoder_layer[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "decoder_layer_11 (DecoderLayer) (None, 25, 512)      2886144     embedding_23[0][0]               \n",
+      "decoder_layer (DecoderLayer)    (None, 25, 512)      3672576     embedding_1[0][0]                \n",
+      "                                                                 encoder_layer_1[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "decoder_layer_12 (DecoderLayer) (None, 25, 512)      2886144     decoder_layer_11[0][0]           \n",
+      "decoder_layer_1 (DecoderLayer)  (None, 25, 512)      3672576     decoder_layer[0][0]              \n",
+      "                                                                 encoder_layer_1[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                 (None, 25, 400)      205200      decoder_layer_12[0][0]           \n",
+      "dense (Dense)                   (None, 25, 400)      205200      decoder_layer_1[0][0]            \n",
       "==================================================================================================\n",
-      "Total params: 10,535,312\n",
-      "Trainable params: 10,535,312\n",
+      "Total params: 13,681,040\n",
+      "Trainable params: 13,681,040\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -610,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
